--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
                         </div>
                 </div>
                 <h3><a href="imprimimos.html">TÉCNICAS DE IMPRESIÓN</a></h3>
-                <h3><a href="index.html">MÁRKETING DIGITAL</a></h3>
-                <h3><a href="index.html">EXPERIENCIA DE MARCA</a></h3>
-                <h3><a href="index.html">CONTÁCTANOS</a></h3>
+                <h3><a href="marketing_digital.html">MÁRKETING DIGITAL</a></h3>
+                <h3><a href="experiencia_de_marca.html">EXPERIENCIA DE MARCA</a></h3>
+                <h3><a href="contactanos.html">CONTÁCTANOS</a></h3>
             </div>
         </div>
         <div class="contact-button">
